--- a/package.json
+++ b/package.json
@@ -1,57 +1,61 @@
 {
-  "name": "lease-calculator",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start",
-    "db:push": "prisma db push",
-    "db:generate": "prisma generate",
-    "db:studio": "prisma studio",
-    "format": "prettier --write ."
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "5.2.0",
-    "@t3-oss/env-nextjs": "0.6.1",
-    "@tanstack/react-query": "4.35.0",
-    "@trpc/client": "10.38.1",
-    "@trpc/next": "10.38.1",
-    "@trpc/react-query": "10.38.1",
-    "@trpc/server": "10.38.1",
-    "clsx": "^2.0.0",
-    "next": "13.4.19",
-    "next-auth": "4.23.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "superjson": "1.13.1",
-    "tailwind-merge": "^1.14.0",
-    "zod": "3.22.2"
-  },
-  "devDependencies": {
-    "@types/eslint": "8.44.2",
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "6.6.0",
-    "@typescript-eslint/parser": "6.6.0",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "postcss": "8.4.29",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4",
-    "prisma": "5.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.19.0"
-  },
-  "prisma": {
-    "schema": "src/prisma/schema.prisma"
-  }
+	"name": "lease-calculator",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"postinstall": "prisma generate",
+		"lint": "next lint",
+		"start": "next start",
+		"db:push": "prisma db push",
+		"db:generate": "prisma generate",
+		"db:studio": "prisma studio",
+		"db:seed": "prisma db seed",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"@next-auth/prisma-adapter": "1.0.7",
+		"@prisma/client": "5.2.0",
+		"@t3-oss/env-nextjs": "0.6.1",
+		"@tanstack/react-query": "4.35.0",
+		"@trpc/client": "10.38.1",
+		"@trpc/next": "10.38.1",
+		"@trpc/react-query": "10.38.1",
+		"@trpc/server": "10.38.1",
+		"clsx": "2.0.0",
+		"next": "13.4.19",
+		"next-auth": "4.23.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"superjson": "1.13.1",
+		"tailwind-merge": "1.14.0",
+		"zod": "3.22.2"
+	},
+	"devDependencies": {
+		"@faker-js/faker": "8.0.2",
+		"@types/eslint": "8.44.2",
+		"@types/node": "20.5.9",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.7",
+		"@typescript-eslint/eslint-plugin": "6.6.0",
+		"@typescript-eslint/parser": "6.6.0",
+		"autoprefixer": "10.4.15",
+		"eslint": "8.48.0",
+		"eslint-config-next": "13.4.19",
+		"postcss": "8.4.29",
+		"prettier": "3.0.3",
+		"prettier-plugin-tailwindcss": "0.5.4",
+		"prisma": "5.2.0",
+		"tailwindcss": "3.3.3",
+		"tsx": "3.12.8",
+		"typescript": "5.2.2"
+	},
+	"ct3aMetadata": {
+		"initVersion": "7.19.0"
+	},
+	"prisma": {
+		"schema": "src/prisma/schema.prisma",
+		"seed": "tsx src/prisma/seed.ts"
+	}
 }
