--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@hookform/resolvers": "3.3.1",
 		"@next-auth/prisma-adapter": "1.0.7",
 		"@prisma/client": "5.2.0",
 		"@t3-oss/env-nextjs": "0.6.1",
@@ -28,6 +29,7 @@
 		"next-auth": "4.23.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "7.46.1",
 		"superjson": "1.13.1",
 		"tailwind-merge": "1.14.0",
 		"zod": "3.22.2"
