✨ Test and implement lease utility methods

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"db:studio": "prisma studio",
 		"db:seed": "prisma db seed",
 		"db:deploy": "prisma migrate deploy",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test:watch": "bun test --watch"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "3.3.1",
@@ -44,6 +45,7 @@
 		"@typescript-eslint/eslint-plugin": "6.6.0",
 		"@typescript-eslint/parser": "6.6.0",
 		"autoprefixer": "10.4.15",
+		"bun-types": "1.0.1",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
 		"postcss": "8.4.29",
