--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
 		"paths": {
 			"~/*": ["./src/*"]
 		},
-		"plugins": [{ "name": "next" }],
-		"types": ["bun-types"]
+		"plugins": [{ "name": "next" }]
 	},
 	"include": [
 		".eslintrc.cjs",
