--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"db:studio": "prisma studio",
 		"db:seed": "prisma db seed",
 		"format": "prettier --write .",
-		"test:watch": "bun test --watch"
+		"test": "vitest",
+		"test:watch": "vitest --watch"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "3.3.1",
@@ -46,8 +47,6 @@
 		"@typescript-eslint/eslint-plugin": "6.6.0",
 		"@typescript-eslint/parser": "6.6.0",
 		"autoprefixer": "10.4.15",
-		"bun": "1.0.0",
-		"bun-types": "1.0.1",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
 		"mockdate": "3.0.5",
@@ -57,7 +56,9 @@
 		"prisma": "5.2.0",
 		"tailwindcss": "3.3.3",
 		"tsx": "3.12.8",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"vite-tsconfig-paths": "4.2.0",
+		"vitest": "0.34.4"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.19.0"
