--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"db:generate": "prisma generate",
 		"db:studio": "prisma studio",
 		"db:seed": "prisma db seed",
-		"format": "prettier --write .",
+		"format": "prettier .",
+		"typecheck": "tsc --noEmit",
 		"test": "vitest",
 		"test:watch": "vitest --watch"
 	},
