--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "lease-calculator",
 	"version": "0.1.0",
 	"private": true,
+	"packageManager": "pnpm@8.7.4",
 	"scripts": {
 		"build": "next build",
 		"vercel-build": "prisma migrate deploy && next build",
