--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 		"@hookform/resolvers": "3.3.1",
 		"@next-auth/prisma-adapter": "1.0.7",
 		"@prisma/client": "5.3.1",
+		"@radix-ui/react-icons": "1.3.0",
 		"@t3-oss/env-nextjs": "0.6.1",
 		"@tanstack/react-query": "4.35.3",
 		"@trpc/client": "10.38.3",
 		"@trpc/next": "10.38.3",
 		"@trpc/react-query": "10.38.3",
 		"@trpc/server": "10.38.3",
+		"class-variance-authority": "0.7.0",
 		"clsx": "2.0.0",
 		"dayjs": "1.11.9",
 		"next": "13.4.19",
@@ -37,6 +39,7 @@
 		"react-hook-form": "7.46.1",
 		"superjson": "1.13.1",
 		"tailwind-merge": "1.14.0",
+		"tailwindcss-animate": "1.0.7",
 		"zod": "3.22.2"
 	},
 	"devDependencies": {
