--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 		"@hookform/resolvers": "3.3.1",
 		"@next-auth/prisma-adapter": "1.0.7",
 		"@prisma/client": "5.3.1",
+		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-icons": "1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-navigation-menu": "^1.1.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "0.6.1",
 		"@tanstack/react-query": "4.35.3",
@@ -34,8 +36,10 @@
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.0.0",
 		"dayjs": "1.11.9",
+		"lucide-react": "0.277.0",
 		"next": "13.4.19",
 		"next-auth": "4.23.1",
+		"next-themes": "0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.46.1",
