--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
 		"@hookform/resolvers": "3.3.1",
 		"@next-auth/prisma-adapter": "1.0.7",
 		"@prisma/client": "5.3.1",
+		"@radix-ui/react-avatar": "^1.0.3",
+		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-icons": "1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-navigation-menu": "^1.1.3",
+		"@radix-ui/react-popover": "^1.0.6",
+		"@radix-ui/react-select": "^1.2.2",
+		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@t3-oss/env-nextjs": "0.6.1",
 		"@tanstack/react-query": "4.35.3",
@@ -35,6 +40,7 @@
 		"@trpc/server": "10.38.3",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.0.0",
+		"cmdk": "^0.2.0",
 		"dayjs": "1.11.9",
 		"lucide-react": "0.277.0",
 		"next": "13.4.19",
