--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 		"test": "vitest"
 	},
 	"dependencies": {
+		"@auth/prisma-adapter": "^1.0.13",
 		"@hookform/resolvers": "3.3.4",
-		"@next-auth/prisma-adapter": "1.0.7",
 		"@prisma/client": "5.7.1",
 		"@radix-ui/react-avatar": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.4",
@@ -44,7 +44,7 @@
 		"dayjs": "1.11.10",
 		"lucide-react": "0.304.0",
 		"next": "14.0.4",
-		"next-auth": "4.24.5",
+		"next-auth": "5.0.0-beta.4",
 		"next-themes": "0.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
