--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ DATABASE_URL="postgresql://localhost/lease-calculator"
 AUTH_SECRET=""
 AUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
+AUTH_GITHUB_ID=""
+AUTH_GITHUB_SECRET=""
