--- a/package.json
+++ b/package.json
@@ -19,30 +19,30 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "^1.0.13",
+		"@auth/prisma-adapter": "1.0.14",
 		"@hookform/resolvers": "3.3.4",
 		"@prisma/client": "5.7.1",
-		"@radix-ui/react-avatar": "^1.0.3",
-		"@radix-ui/react-dialog": "^1.0.4",
-		"@radix-ui/react-dropdown-menu": "^2.0.5",
+		"@radix-ui/react-avatar": "1.0.4",
+		"@radix-ui/react-dialog": "1.0.5",
+		"@radix-ui/react-dropdown-menu": "2.0.6",
 		"@radix-ui/react-icons": "1.3.0",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-navigation-menu": "^1.1.3",
-		"@radix-ui/react-popover": "^1.0.6",
-		"@radix-ui/react-select": "^2.0.0",
-		"@radix-ui/react-separator": "^1.0.3",
-		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-label": "2.0.2",
+		"@radix-ui/react-navigation-menu": "1.1.4",
+		"@radix-ui/react-popover": "1.0.7",
+		"@radix-ui/react-select": "2.0.0",
+		"@radix-ui/react-separator": "1.0.3",
+		"@radix-ui/react-slot": "1.0.2",
 		"@t3-oss/env-nextjs": "0.7.1",
 		"@tanstack/react-query": "4.36.1",
-		"@trpc/client": "10.44.1",
-		"@trpc/next": "10.44.1",
-		"@trpc/react-query": "10.44.1",
-		"@trpc/server": "10.44.1",
+		"@trpc/client": "10.45.0",
+		"@trpc/next": "10.45.0",
+		"@trpc/react-query": "10.45.0",
+		"@trpc/server": "10.45.0",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.0",
-		"cmdk": "^0.2.0",
+		"cmdk": "0.2.0",
 		"dayjs": "1.11.10",
-		"lucide-react": "0.304.0",
+		"lucide-react": "0.307.0",
 		"next": "14.0.4",
 		"next-auth": "5.0.0-beta.4",
 		"next-themes": "0.2.1",
