--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"eslint": "8.56.0",
 		"eslint-config-next": "14.0.4",
 		"mockdate": "3.0.5",
+		"nodemailer": "6.9.8",
 		"postcss": "8.4.33",
 		"prettier": "3.1.1",
 		"prettier-plugin-tailwindcss": "0.5.11",
