--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"@trpc/next": "10.45.2",
 		"@trpc/react-query": "10.45.2",
 		"@trpc/server": "10.45.2",
-		"ag-charts-react": "^9.0.0",
+		"ag-charts-react": "9.1.1",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.0",
 		"cmdk": "0.2.1",
