--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,52 +1,25 @@
-name: CI
+name: 🚨 Check Quality and Types
 
 on:
-  pull_request:
-    branches: ["*"]
   push:
-    branches: ["main"]
-  merge_group:
-
-env:
-  SKIP_ENV_VALIDATION: true
 
 jobs:
-  build-lint:
+  ci:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: 🛒 Checkout
         uses: actions/checkout@v4
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2.4.0
-
-      - name: Setup Node 18
-        uses: actions/setup-node@v4
+      - name: 🏗️ Setup Biome
+        uses: biomejs/setup-biome@v2
         with:
-          node-version: 18
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        run: |
-          echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Install deps (with cache)
-        run: pnpm install
-
-      - name: Lint
-        run: pnpm lint
-
-      - name: Typecheck
-        run: pnpm typecheck
-
-      - name: Run tests
-        run: pnpm test
+          version: latest
+      - name: 🎨 Run Biome
+        run: biome ci src
+      - name: 🏗️ Setup Bun
+        uses: oven-sh/setup-bun@v1
+      - name: 📦 Install Dependencies
+        run: bun install
+      - name: 🏷️ Check Types
+        run: bun typecheck
+      - name: 🧪 Test
+        run: bun test
