--- a/package.json
+++ b/package.json
@@ -1,87 +1,77 @@
 {
-	"name": "lease-calculator",
-	"version": "0.1.0",
-	"private": true,
-	"packageManager": "pnpm@8.14.3",
-	"scripts": {
-		"build": "next build",
-		"vercel-build": "prisma migrate deploy && next build",
-		"dev": "next dev",
-		"postinstall": "prisma generate",
-		"lint": "next lint",
-		"start": "next start",
-		"db:push": "prisma db push",
-		"db:generate": "prisma generate",
-		"db:studio": "prisma studio",
-		"db:seed": "prisma db seed",
-		"format": "prettier .",
-		"typecheck": "tsc --noEmit",
-		"test": "vitest"
-	},
-	"dependencies": {
-		"@auth/prisma-adapter": "1.1.0",
-		"@hookform/resolvers": "3.3.4",
-		"@prisma/client": "5.8.1",
-		"@radix-ui/react-avatar": "1.0.4",
-		"@radix-ui/react-dialog": "1.0.5",
-		"@radix-ui/react-dropdown-menu": "2.0.6",
-		"@radix-ui/react-icons": "1.3.0",
-		"@radix-ui/react-label": "2.0.2",
-		"@radix-ui/react-navigation-menu": "1.1.4",
-		"@radix-ui/react-popover": "1.0.7",
-		"@radix-ui/react-select": "2.0.0",
-		"@radix-ui/react-separator": "1.0.3",
-		"@radix-ui/react-slot": "1.0.2",
-		"@t3-oss/env-nextjs": "0.7.3",
-		"@tanstack/react-query": "4.36.1",
-		"@trpc/client": "10.45.0",
-		"@trpc/next": "10.45.0",
-		"@trpc/react-query": "10.45.0",
-		"@trpc/server": "10.45.0",
-		"class-variance-authority": "0.7.0",
-		"clsx": "2.1.0",
-		"cmdk": "0.2.0",
-		"dayjs": "1.11.10",
-		"lucide-react": "0.314.0",
-		"next": "14.0.4",
-		"next-auth": "5.0.0-beta.4",
-		"next-themes": "0.2.1",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-hook-form": "7.49.3",
-		"superjson": "2.2.1",
-		"tailwind-merge": "2.2.1",
-		"tailwindcss-animate": "1.0.7",
-		"zod": "3.22.4"
-	},
-	"devDependencies": {
-		"@faker-js/faker": "8.4.0",
-		"@types/eslint": "8.56.2",
-		"@types/node": "20.11.8",
-		"@types/react": "18.2.48",
-		"@types/react-dom": "18.2.18",
-		"@typescript-eslint/eslint-plugin": "6.19.1",
-		"@typescript-eslint/parser": "6.19.1",
-		"autoprefixer": "10.4.17",
-		"eslint": "8.56.0",
-		"eslint-config-next": "14.0.4",
-		"mockdate": "3.0.5",
-		"nodemailer": "6.9.8",
-		"postcss": "8.4.33",
-		"prettier": "3.2.4",
-		"prettier-plugin-tailwindcss": "0.5.11",
-		"prisma": "5.8.1",
-		"tailwindcss": "3.4.1",
-		"tsx": "4.7.0",
-		"typescript": "5.3.3",
-		"vite-tsconfig-paths": "4.3.1",
-		"vitest": "1.2.2"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.19.0"
-	},
-	"prisma": {
-		"schema": "src/prisma/schema.prisma",
-		"seed": "tsx src/prisma/seed.ts"
-	}
+  "name": "lease-calculator",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "vercel-build": "prisma migrate deploy && next build",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "check:fix": "bunx @biomejs/biome check --apply src",
+    "typecheck": "tsc --noEmit",
+    "start": "next start",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "test": "bun test"
+  },
+  "dependencies": {
+    "@auth/prisma-adapter": "1.1.0",
+    "@hookform/resolvers": "3.3.4",
+    "@prisma/client": "5.8.1",
+    "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-navigation-menu": "1.1.4",
+    "@radix-ui/react-popover": "1.0.7",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.0.3",
+    "@radix-ui/react-slot": "1.0.2",
+    "@t3-oss/env-nextjs": "0.7.3",
+    "@tanstack/react-query": "4.36.1",
+    "@trpc/client": "10.45.0",
+    "@trpc/next": "10.45.0",
+    "@trpc/react-query": "10.45.0",
+    "@trpc/server": "10.45.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "cmdk": "0.2.0",
+    "dayjs": "1.11.10",
+    "lucide-react": "0.314.0",
+    "next": "14.0.4",
+    "next-auth": "5.0.0-beta.4",
+    "next-themes": "0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.49.3",
+    "superjson": "2.2.1",
+    "tailwind-merge": "2.2.1",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.22.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.5.3",
+    "@faker-js/faker": "8.4.0",
+    "@types/node": "20.11.8",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.17",
+    "bun-types": "^1.0.25",
+    "mockdate": "3.0.5",
+    "nodemailer": "6.9.8",
+    "postcss": "8.4.33",
+    "prisma": "5.8.1",
+    "tailwindcss": "3.4.1",
+    "tsx": "4.7.0",
+    "typescript": "5.3.3"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.19.0"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seed.ts"
+  }
 }
