--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,10 @@
 		"paths": {
 			"~/*": ["./src/*"]
 		},
-		"plugins": [{ "name": "next" }]
+		"plugins": [{ "name": "next" }],
+		"types": ["bun-types"]
 	},
 	"include": [
-		".eslintrc.cjs",
 		"next-env.d.ts",
 		"**/*.ts",
 		"**/*.tsx",
