--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"cmdk": "0.2.1",
 		"dayjs": "1.11.10",
 		"lucide-react": "0.323.0",
-		"next": "14.1.0",
+		"next": "canary",
 		"next-auth": "5.0.0-beta.8",
 		"next-themes": "0.2.1",
 		"react": "18.2.0",
