--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
 		"@auth/prisma-adapter": "1.5.0",
 		"@hookform/resolvers": "3.3.4",
 		"@prisma/client": "5.10.2",
-		"@radix-ui/react-avatar": "1.0.4",
 		"@radix-ui/react-dialog": "1.0.5",
 		"@radix-ui/react-dropdown-menu": "2.0.6",
 		"@radix-ui/react-icons": "1.3.0",
 		"@radix-ui/react-label": "2.0.2",
-		"@radix-ui/react-navigation-menu": "1.1.4",
 		"@radix-ui/react-popover": "1.0.7",
 		"@radix-ui/react-select": "2.0.0",
 		"@radix-ui/react-separator": "1.0.3",
@@ -55,17 +53,15 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.5.3",
 		"@faker-js/faker": "8.4.1",
-		"@types/node": "20.11.24",
+		"@types/bun": "^1.0.8",
 		"@types/react": "18.2.61",
 		"@types/react-dom": "18.2.19",
 		"autoprefixer": "10.4.18",
-		"bun-types": "^1.0.25",
 		"mockdate": "3.0.5",
 		"nodemailer": "6.9.11",
 		"postcss": "8.4.35",
 		"prisma": "5.10.2",
 		"tailwindcss": "3.4.1",
-		"tsx": "4.7.1",
 		"typescript": "5.3.3"
 	},
 	"ct3aMetadata": {
