📌 Pin biome in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: 🏗️ Setup Biome
         uses: biomejs/setup-biome@v2
         with:
-          version: latest
+          version: '1.5.3'
       - name: 🎨 Run Biome
         run: biome ci src
       - name: 🏗️ Setup Bun
