⏪ Revert to pnpm

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"vercel-build": "prisma migrate deploy && next build",
 		"dev": "next dev",
 		"postinstall": "prisma generate",
-		"check:fix": "bunx @biomejs/biome check --apply src",
+		"check:fix": "pnpm biome check --apply src",
 		"typecheck": "tsc --noEmit",
 		"start": "next start",
 		"db:push": "prisma db push",
@@ -44,8 +44,8 @@
 		"next": "canary",
 		"next-auth": "5.0.0-beta.17",
 		"next-themes": "0.3.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "18.3.0",
+		"react-dom": "18.3.0",
 		"react-hook-form": "7.51.3",
 		"superjson": "2.2.1",
 		"tailwind-merge": "2.3.0",
@@ -56,9 +56,10 @@
 		"@biomejs/biome": "1.7.1",
 		"@faker-js/faker": "8.4.1",
 		"@types/bun": "^1.0.8",
-		"@types/react": "18.2.79",
-		"@types/react-dom": "18.2.25",
+		"@types/react": "18.3.0",
+		"@types/react-dom": "18.3.0",
 		"autoprefixer": "10.4.19",
+		"bun": "1.1.4",
 		"mockdate": "3.0.5",
 		"nodemailer": "6.9.13",
 		"postcss": "8.4.38",
