--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"cmdk": "0.2.1",
 		"dayjs": "1.11.11",
 		"lucide-react": "0.378.0",
-		"next": "canary",
+		"next": "14.2.3",
 		"next-auth": "5.0.0-beta.18",
 		"next-themes": "0.3.0",
 		"react": "18.3.1",
