--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"vercel-build": "prisma migrate deploy && next build",
 		"dev": "next dev",
 		"postinstall": "prisma generate",
-		"check:fix": "pnpm biome check --apply src",
+		"check:fix": "pnpm biome check --write src",
 		"typecheck": "tsc --noEmit",
 		"start": "next start",
 		"db:push": "prisma db push",
@@ -35,7 +35,6 @@
 		"@trpc/next": "10.45.2",
 		"@trpc/react-query": "10.45.2",
 		"@trpc/server": "10.45.2",
-		"ag-charts-react": "9.3.2",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
 		"cmdk": "0.2.1",
@@ -47,6 +46,7 @@
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.52.2",
+		"recharts": "2.12.7",
 		"superjson": "2.2.1",
 		"tailwind-merge": "2.4.0",
 		"tailwindcss-animate": "1.0.7",
