🔧 Auto merge lucide-react

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -14,6 +14,11 @@
 		{
 			"matchPackagePatterns": ["@trpc"],
 			"groupName": "trpc"
+		},
+		{
+			"matchPackageNames": ["lucide-react"],
+			"matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+			"automerge": true
 		}
 	],
 	"schedule": ["after 9pm and before 9am every weekday", "every weekend"],
