--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
 	"name": "lease-calculator",
 	"version": "0.1.0",
 	"private": true,
+	"packageManager": "pnpm@9.12.0",
 	"scripts": {
 		"build": "next build",
 		"vercel-build": "prisma migrate deploy && next build",
 		"dev": "next dev",
 		"postinstall": "prisma generate",
 		"check:fix": "pnpm biome check --write src",
-		"typecheck": "tsc --noEmit",
+		"check-types": "tsc --noEmit",
 		"start": "next start",
 		"db:push": "prisma db push",
 		"db:generate": "prisma generate",
@@ -17,16 +18,16 @@
 		"test": "bun test"
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "2.4.2",
+		"@auth/prisma-adapter": "2.6.0",
 		"@hookform/resolvers": "3.9.0",
-		"@prisma/client": "5.19.1",
-		"@radix-ui/react-alert-dialog": "^1.0.5",
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-dropdown-menu": "2.1.1",
+		"@prisma/client": "5.20.0",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "2.1.2",
 		"@radix-ui/react-icons": "1.3.0",
 		"@radix-ui/react-label": "2.1.0",
-		"@radix-ui/react-popover": "1.1.1",
-		"@radix-ui/react-select": "2.1.1",
+		"@radix-ui/react-popover": "1.1.2",
+		"@radix-ui/react-select": "2.1.2",
 		"@radix-ui/react-separator": "1.1.0",
 		"@radix-ui/react-slot": "1.1.0",
 		"@t3-oss/env-nextjs": "0.11.1",
@@ -37,10 +38,10 @@
 		"@trpc/server": "10.45.2",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
-		"cmdk": "0.2.1",
+		"cmdk": "1.0.0",
 		"dayjs": "1.11.13",
-		"lucide-react": "0.439.0",
-		"next": "14.2.10",
+		"lucide-react": "0.447.0",
+		"next": "14.2.14",
 		"next-auth": "5.0.0-beta.20",
 		"next-themes": "0.3.0",
 		"react": "18.3.1",
@@ -48,23 +49,23 @@
 		"react-hook-form": "7.53.0",
 		"recharts": "2.12.7",
 		"superjson": "2.2.1",
-		"tailwind-merge": "2.5.2",
+		"tailwind-merge": "2.5.3",
 		"tailwindcss-animate": "1.0.7",
 		"zod": "3.23.8"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
-		"@faker-js/faker": "9.0.0",
-		"@types/bun": "^1.0.8",
-		"@types/react": "18.3.5",
+		"@biomejs/biome": "1.9.3",
+		"@faker-js/faker": "9.0.3",
+		"@types/bun": "^1.1.10",
+		"@types/react": "18.3.11",
 		"@types/react-dom": "18.3.0",
 		"autoprefixer": "10.4.20",
-		"bun": "1.1.27",
+		"bun": "1.1.29",
 		"mockdate": "3.0.5",
 		"nodemailer": "6.9.15",
-		"postcss": "8.4.45",
-		"prisma": "5.19.1",
-		"tailwindcss": "3.4.11",
+		"postcss": "8.4.47",
+		"prisma": "5.20.0",
+		"tailwindcss": "3.4.13",
 		"typescript": "5.6.2"
 	},
 	"ct3aMetadata": {
