--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "next build",
 		"vercel-build": "prisma migrate deploy && next build",
-		"dev": "next dev",
+		"dev": "next dev --turbopack",
 		"postinstall": "prisma generate",
 		"check:fix": "pnpm biome check --write src",
 		"check-types": "tsc --noEmit",
@@ -20,7 +20,7 @@
 	"dependencies": {
 		"@auth/prisma-adapter": "2.7.3",
 		"@hookform/resolvers": "3.9.1",
-		"@prisma/client": "5.21.1",
+		"@prisma/client": "5.22.0",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "2.1.2",
@@ -41,11 +41,11 @@
 		"cmdk": "0.2.1",
 		"dayjs": "1.11.13",
 		"lucide-react": "0.456.0",
-		"next": "14.2.17",
+		"next": "15.0.3",
 		"next-auth": "5.0.0-beta.25",
-		"next-themes": "0.3.0",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
+		"next-themes": "0.4.3",
+		"react": "19.0.0-rc-66855b96-20241106",
+		"react-dom": "19.0.0-rc-66855b96-20241106",
 		"react-hook-form": "7.53.2",
 		"recharts": "2.13.3",
 		"superjson": "2.2.1",
@@ -57,14 +57,14 @@
 		"@biomejs/biome": "1.9.4",
 		"@faker-js/faker": "9.2.0",
 		"@types/bun": "^1.1.10",
-		"@types/react": "18.3.12",
-		"@types/react-dom": "18.3.1",
+		"@types/react": "npm:types-react@19.0.0-rc.1",
+		"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
 		"autoprefixer": "10.4.20",
 		"bun": "1.1.34",
 		"mockdate": "3.0.5",
 		"nodemailer": "6.9.16",
 		"postcss": "8.4.47",
-		"prisma": "5.21.1",
+		"prisma": "5.22.0",
 		"tailwindcss": "3.4.14",
 		"typescript": "5.6.3"
 	},
@@ -73,5 +73,11 @@
 	},
 	"prisma": {
 		"seed": "bun run prisma/seed.ts"
+	},
+	"pnpm": {
+		"overrides": {
+			"@types/react": "npm:types-react@19.0.0-rc.1",
+			"@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+		}
 	}
 }
