--- a/package.json
+++ b/package.json
@@ -1,77 +1,83 @@
 {
-	"name": "lease-calculator",
-	"version": "0.1.0",
-	"private": true,
-	"packageManager": "pnpm@9.12.3",
-	"scripts": {
-		"build": "next build",
-		"vercel-build": "prisma migrate deploy && next build",
-		"dev": "next dev",
-		"postinstall": "prisma generate",
-		"check:fix": "pnpm biome check --write src",
-		"check-types": "tsc --noEmit",
-		"start": "next start",
-		"db:push": "prisma db push",
-		"db:generate": "prisma generate",
-		"db:studio": "prisma studio",
-		"db:seed": "prisma db seed",
-		"test": "bun test"
-	},
-	"dependencies": {
-		"@auth/prisma-adapter": "2.7.4",
-		"@hookform/resolvers": "3.9.1",
-		"@prisma/client": "6.0.0",
-		"@radix-ui/react-alert-dialog": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.2",
-		"@radix-ui/react-dropdown-menu": "2.1.2",
-		"@radix-ui/react-icons": "1.3.2",
-		"@radix-ui/react-label": "2.1.0",
-		"@radix-ui/react-popover": "1.1.2",
-		"@radix-ui/react-select": "2.1.2",
-		"@radix-ui/react-separator": "1.1.0",
-		"@radix-ui/react-slot": "1.1.0",
-		"@t3-oss/env-nextjs": "0.11.1",
-		"@tanstack/react-query": "4.36.1",
-		"@trpc/client": "10.45.2",
-		"@trpc/next": "10.45.2",
-		"@trpc/react-query": "10.45.2",
-		"@trpc/server": "10.45.2",
-		"class-variance-authority": "0.7.1",
-		"clsx": "2.1.1",
-		"cmdk": "0.2.1",
-		"dayjs": "1.11.13",
-		"lucide-react": "0.462.0",
-		"next": "14.2.18",
-		"next-auth": "5.0.0-beta.25",
-		"next-themes": "0.4.3",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-hook-form": "7.53.2",
-		"recharts": "2.13.3",
-		"superjson": "2.2.1",
-		"tailwind-merge": "2.5.5",
-		"tailwindcss-animate": "1.0.7",
-		"zod": "3.23.8"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@faker-js/faker": "9.2.0",
-		"@types/bun": "^1.1.10",
-		"@types/react": "18.3.12",
-		"@types/react-dom": "18.3.1",
-		"autoprefixer": "10.4.20",
-		"bun": "1.1.37",
-		"mockdate": "3.0.5",
-		"nodemailer": "6.9.16",
-		"postcss": "8.4.49",
-		"prisma": "6.0.0",
-		"tailwindcss": "3.4.15",
-		"typescript": "5.7.2"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.19.0"
-	},
-	"prisma": {
-		"seed": "bun run prisma/seed.ts"
-	}
+  "name": "lease-calculator",
+  "version": "0.1.0",
+  "private": true,
+  "packageManager": "pnpm@9.12.3",
+  "scripts": {
+    "build": "next build",
+    "vercel-build": "prisma migrate deploy && next build",
+    "dev": "next dev --turbopack",
+    "postinstall": "prisma generate",
+    "check:fix": "pnpm biome check --write src",
+    "check-types": "tsc --noEmit",
+    "start": "next start",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "test": "bun test"
+  },
+  "dependencies": {
+    "@auth/prisma-adapter": "2.7.4",
+    "@hookform/resolvers": "3.9.1",
+    "@prisma/client": "6.0.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-icons": "1.3.2",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-select": "2.1.2",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
+    "@t3-oss/env-nextjs": "0.11.1",
+    "@tanstack/react-query": "4.36.1",
+    "@trpc/client": "10.45.2",
+    "@trpc/next": "10.45.2",
+    "@trpc/react-query": "10.45.2",
+    "@trpc/server": "10.45.2",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "cmdk": "0.2.1",
+    "dayjs": "1.11.13",
+    "lucide-react": "0.462.0",
+    "next": "15.0.3",
+    "next-auth": "5.0.0-beta.25",
+    "next-themes": "0.4.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "7.53.2",
+    "recharts": "2.13.3",
+    "superjson": "2.2.1",
+    "tailwind-merge": "2.5.5",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.23.8"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@faker-js/faker": "9.2.0",
+    "@types/bun": "^1.1.10",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "autoprefixer": "10.4.20",
+    "bun": "1.1.37",
+    "mockdate": "3.0.5",
+    "nodemailer": "6.9.16",
+    "postcss": "8.4.49",
+    "prisma": "6.0.0",
+    "tailwindcss": "3.4.15",
+    "typescript": "5.7.2"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.19.0"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seed.ts"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
+  }
 }
