--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
 		"db:generate": "prisma generate",
 		"db:studio": "prisma studio",
 		"db:seed": "prisma db seed",
-		"test": "bun test"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@auth/prisma-adapter": "2.7.4",
 		"@hookform/resolvers": "3.10.0",
 		"@prisma/client": "6.2.1",
-		"@radix-ui/react-alert-dialog": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-alert-dialog": "1.1.2",
+		"@radix-ui/react-dialog": "1.1.2",
 		"@radix-ui/react-dropdown-menu": "2.1.5",
 		"@radix-ui/react-icons": "1.3.2",
 		"@radix-ui/react-label": "2.1.1",
@@ -56,22 +56,27 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@faker-js/faker": "9.4.0",
-		"@types/bun": "^1.1.10",
+		"@testing-library/dom": "10.4.0",
+		"@testing-library/react": "16.2.0",
 		"@types/react": "19.0.8",
 		"@types/react-dom": "19.0.3",
+		"@vitejs/plugin-react": "4.3.4",
 		"autoprefixer": "10.4.20",
-		"bun": "1.2.0",
+		"jsdom": "26.0.0",
 		"mockdate": "3.0.5",
 		"nodemailer": "6.9.16",
 		"postcss": "8.5.1",
 		"prisma": "6.2.1",
 		"tailwindcss": "3.4.17",
-		"typescript": "5.7.3"
+		"tsx": "4.19.2",
+		"typescript": "5.7.3",
+		"vite-tsconfig-paths": "5.1.4",
+		"vitest": "3.0.4"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.19.0"
 	},
 	"prisma": {
-		"seed": "bun run prisma/seed.ts"
+		"seed": "tsx prisma/seed.ts"
 	}
 }
