--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "lease-calculator",
 	"version": "0.1.0",
 	"private": true,
-	"packageManager": "pnpm@10.4.1",
+	"packageManager": "pnpm@10.5.0",
 	"scripts": {
 		"build": "next build",
 		"vercel-build": "prisma migrate deploy && next build",
@@ -40,7 +40,7 @@
 		"clsx": "2.1.1",
 		"cmdk": "0.2.1",
 		"dayjs": "1.11.13",
-		"lucide-react": "0.475.0",
+		"lucide-react": "0.476.0",
 		"next": "15.1.7",
 		"next-auth": "5.0.0-beta.25",
 		"next-themes": "0.4.4",
@@ -78,5 +78,15 @@
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"@prisma/client",
+			"@prisma/engines",
+			"esbuild",
+			"prisma",
+			"sharp"
+		]
 	}
 }
