--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
 		"@radix-ui/react-separator": "1.1.2",
 		"@radix-ui/react-slot": "1.1.2",
 		"@t3-oss/env-nextjs": "0.12.0",
-		"@tanstack/react-query": "4.36.1",
-		"@trpc/client": "10.45.2",
-		"@trpc/next": "10.45.2",
-		"@trpc/react-query": "10.45.2",
-		"@trpc/server": "10.45.2",
+		"@tanstack/react-query": "5.67.1",
+		"@tanstack/react-query-devtools": "5.67.1",
+		"@trpc/client": "11.0.0-rc.824",
+		"@trpc/next": "11.0.0-rc.824",
+		"@trpc/react-query": "11.0.0-rc.824",
+		"@trpc/server": "11.0.0-rc.824",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"cmdk": "0.2.1",
