--- a/components.json
+++ b/components.json
@@ -7,10 +7,11 @@
 		"config": "tailwind.config.ts",
 		"css": "src/styles/globals.css",
 		"baseColor": "neutral",
-		"cssVariables": false
+		"cssVariables": true
 	},
 	"aliases": {
 		"components": "~/components",
 		"utils": "~/lib/utils"
-	}
+	},
+	"iconLibrary": "radix"
 }
