--- a/package.json
+++ b/package.json
@@ -2,88 +2,84 @@
 	"name": "lease-calculator",
 	"version": "0.1.0",
 	"private": true,
-	"packageManager": "pnpm@10.12.4",
+	"packageManager": "pnpm@10.22.0",
 	"scripts": {
 		"build": "next build",
-		"vercel-build": "prisma migrate deploy && next build",
 		"dev": "next dev --turbopack",
-		"postinstall": "prisma generate",
 		"check:fix": "pnpm biome check --write src",
 		"check-types": "tsc --noEmit",
 		"start": "next start",
-		"db:push": "prisma db push",
-		"db:generate": "prisma generate",
-		"db:studio": "prisma studio",
-		"db:seed": "prisma db seed",
-		"test": "vitest"
+		"db:push": "drizzle-kit push",
+		"db:studio": "drizzle-kit studio",
+		"db:seed": "pnpm with-env tsx src/server/db/run-seed.ts",
+		"with-env": "dotenvx run --",
+		"test": "vitest run",
+		"test:watch": "vitest --watch"
 	},
 	"dependencies": {
-		"@auth/prisma-adapter": "2.10.0",
-		"@hookform/resolvers": "5.1.1",
-		"@prisma/client": "6.10.1",
-		"@radix-ui/react-alert-dialog": "1.1.14",
-		"@radix-ui/react-dialog": "1.1.14",
-		"@radix-ui/react-dropdown-menu": "2.1.15",
+		"@dotenvx/dotenvx": "1.51.1",
+		"@hookform/resolvers": "5.2.2",
+		"@paralleldrive/cuid2": "3.0.4",
+		"@radix-ui/react-alert-dialog": "1.1.15",
+		"@radix-ui/react-dialog": "1.1.15",
+		"@radix-ui/react-dropdown-menu": "2.1.16",
 		"@radix-ui/react-icons": "1.3.2",
-		"@radix-ui/react-label": "2.1.7",
-		"@radix-ui/react-popover": "1.1.14",
-		"@radix-ui/react-separator": "1.1.7",
-		"@radix-ui/react-slot": "1.2.3",
+		"@radix-ui/react-label": "2.1.8",
+		"@radix-ui/react-popover": "1.1.15",
+		"@radix-ui/react-separator": "1.1.8",
+		"@radix-ui/react-slot": "1.2.4",
 		"@t3-oss/env-nextjs": "0.13.8",
-		"@tanstack/react-query": "5.81.5",
-		"@trpc/client": "11.4.4",
-		"@trpc/react-query": "11.4.4",
-		"@trpc/server": "11.4.4",
+		"@tanstack/react-query": "5.90.11",
+		"@trpc/client": "11.7.2",
+		"@trpc/react-query": "11.7.2",
+		"@trpc/server": "11.7.2",
+		"better-auth": "1.4.4",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"cmdk": "1.1.1",
-		"dayjs": "1.11.13",
-		"lucide-react": "0.537.0",
-		"next": "15.3.5",
-		"next-auth": "5.0.0-beta.29",
+		"dayjs": "1.11.19",
+		"drizzle-orm": "0.44.7",
+		"esm-env": "1.2.2",
+		"lucide-react": "0.555.0",
+		"next": "16.0.6",
 		"next-themes": "0.4.6",
-		"react": "19.1.1",
-		"react-dom": "19.1.1",
-		"react-hook-form": "7.59.0",
+		"pg": "8.16.3",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"react-hook-form": "7.67.0",
 		"recharts": "2.15.4",
-		"superjson": "2.2.2",
-		"tailwind-merge": "3.3.1",
+		"superjson": "2.2.6",
+		"tailwind-merge": "3.4.0",
 		"tailwindcss-animate": "1.0.7",
-		"zod": "3.25.76"
+		"zod": "4.1.13"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.1.4",
-		"@faker-js/faker": "9.9.0",
-		"@tailwindcss/postcss": "4.1.11",
+		"@biomejs/biome": "2.3.8",
+		"@faker-js/faker": "10.1.0",
+		"@tailwindcss/postcss": "4.1.17",
 		"@testing-library/dom": "10.4.1",
 		"@testing-library/react": "16.3.0",
-		"@types/react": "19.1.9",
-		"@types/react-dom": "19.1.7",
-		"@vitejs/plugin-react": "4.7.0",
-		"jsdom": "26.1.0",
+		"@types/react": "19.2.7",
+		"@types/react-dom": "19.2.3",
+		"@vitejs/plugin-react": "5.1.1",
+		"drizzle-kit": "0.31.7",
+		"happy-dom": "20.0.11",
 		"mockdate": "3.0.5",
 		"postcss": "8.5.6",
-		"prisma": "6.10.1",
-		"tailwindcss": "4.1.11",
-		"tsx": "4.20.3",
-		"typescript": "5.9.2",
+		"tailwindcss": "4.1.17",
+		"tsx": "4.21.0",
+		"typescript": "5.9.3",
 		"vite-tsconfig-paths": "5.1.4",
-		"vitest": "3.2.4"
+		"vitest": "4.0.14"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.19.0"
 	},
-	"prisma": {
-		"seed": "tsx prisma/seed.ts"
-	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@biomejs/biome",
-			"@prisma/client",
-			"@prisma/engines",
 			"@tailwindcss/oxide",
 			"esbuild",
-			"prisma",
 			"sharp"
 		]
 	}
