--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,18 @@
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"incremental": true,
 		"noUncheckedIndexedAccess": true,
 		"baseUrl": ".",
 		"paths": {
-			"~/*": ["./src/*"]
+			"@/*": ["./src/*"]
 		},
-		"plugins": [{ "name": "next" }]
+		"plugins": [
+			{
+				"name": "next"
+			}
+		]
 	},
 	"include": [
 		"next-env.d.ts",
@@ -28,7 +32,8 @@
 		"**/*.tsx",
 		"**/*.cjs",
 		"**/*.mjs",
-		".next/types/**/*.ts"
+		".next/types/**/*.ts",
+		".next/dev/types/**/*.ts"
 	],
 	"exclude": ["node_modules"]
 }
