🔧 Add vercel build scriptc

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"packageManager": "pnpm@10.22.0",
 	"scripts": {
 		"build": "next build",
+		"vercel-build": "pnpm db:push && next build",
 		"dev": "next dev --turbopack",
 		"check:fix": "pnpm biome check --write src",
 		"check-types": "tsc --noEmit",
